--- a/templates/team.html
+++ b/templates/team.html
@@ -22,45 +22,12 @@
       }
 
       Rally.onReady(function () {
-        <!-- put the dashboards here -->
+        // put the dashboards here
       });
     </script>
 
     <style type="text/css">
-      table {
-        border-collapse: collapse;
-      }
-
-      .tablecell {
-        border: 1px solid black;
-        padding-left: 10px;
-        padding-right: 10px;
-      }
-
-      .title {
-        font-weight: bold;
-        font-size: 14pt;
-      }
-
-      .bold {
-        font-weight: bold;
-        background-color: #e0e0e0;
-      }
-
-      .highlight {
-        font-size: 10pt;
-      }
-
-      .center {
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      .filled {
-        font-style: italic;
-        color: #808080;
-      }
+      /* put the style here */
     </style>
   </head>
   <body id="the_body" onload="load_menu()">
