Basic cumulative work chart.

--- a/templates/team.html
+++ b/templates/team.html
@@ -28,6 +28,10 @@
         Rally.getApp('ZzacksWeeklyThroughputDashboardApp').refresh();
       }
 
+      function refresh_cumulative_work() {
+        Rally.getApp('ZzacksCumulativeworkDashboardApp').refresh();
+      }
+
       function load_menu() {
         var b = document.getElementById("the_body");
         b.innerHTML = "<!-- put the menu here -->";
