Bug fix on initiative dashboard.

--- a/templates/program.html
+++ b/templates/program.html
@@ -25,6 +25,13 @@
         b.innerHTML = "<!-- put the menu here -->";
       }
 
+      function set_timebox(ts) {
+        // Rally.getApp('ZzacksFeatureDashboardApp').getContext().setTimeboxScope(ts);
+        // Rally.getApp('ZzacksInitiativeDashboardApp').getContext().setTimeboxScope(ts);
+        // Rally.getApp('ZzacksAllWorkDashboardApp').getContext().setTimeboxScope(ts);
+        // Rally.getApp('ZzacksWeeklyThroughputDashboardApp').getContext().setTimeboxScope(ts);
+      }
+
       Rally.onReady(function () {
         // put the dashboards here
       });
