--- a/templates/program.html
+++ b/templates/program.html
@@ -4,6 +4,15 @@
     <script type="text/javascript" src="/apps/2.1/sdk.js"></script>
 
     <script type="text/javascript">
+      function launch_app(app_name) {
+        if (!Rally.getApp(app_name)) {
+          Rally.launchApp(app_name);
+        } else {
+          Rally.getApp(app_name).disable();
+          Rally.launchApp(app_name);
+        }
+      }
+
       function refresh_feature() {
         Rally.getApp('ZzacksFeatureDashboardApp').refresh();
       }
