Team progress bugfix.

--- a/templates/team.html
+++ b/templates/team.html
@@ -19,10 +19,10 @@
       function toggle_iteration_settings() {
         var l = document.getElementById("iteration_toggle_link");
         if (l.innerHTML == "Show iteration selector") {
-          Rally.getApp('ZzacksFeatureProgressDashboardApp').settings_container.show();
+          Rally.getApp('ZzacksTeamProgressDashboardApp').settings_container.show();
           l.innerHTML = "Hide iteration selector";
         } else {
-          Rally.getApp('ZzacksFeatureProgressDashboardApp').settings_container.hide();
+          Rally.getApp('ZzacksTeamProgressDashboardApp').settings_container.hide();
           l.innerHTML = "Show iteration selector";
         }
       }
@@ -43,8 +43,8 @@
         Rally.getApp('ZzacksCumulativeWorkDashboardApp').refresh();
       }
 
-      function refresh_feature_progress() {
-        Rally.getApp('ZzacksFeatureProgressDashboardApp').refresh();
+      function refresh_team_progress() {
+        Rally.getApp('ZzacksTeamProgressDashboardApp').refresh();
       }
 
       function load_menu() {
