--- a/templates/program.html
+++ b/templates/program.html
@@ -33,6 +33,10 @@
         Rally.getApp('ZzacksScopeChangeDashboardApp').refresh();
       }
 
+      function refresh_feature_complete() {
+        Rally.getApp('ZzacksFeatureCompleteDashboardApp').refresh();
+      }
+
       function load_menu() {
         var b = document.getElementById("the_body");
         b.innerHTML = "<!-- put the menu here -->";
